...
    <string name="format_sheet_label_author">Author</string>
    <string name="format_sheet_label_container">Container</string>
    <string name="format_sheet_video_quality">Video quality</string>
    <string name="format_sheet_audio_quality">Audio quality</string>
    <string name="format_sheet_no_video_stream">This source has no separate video stream.</string>
    <string name="format_sheet_no_audio_stream">This source has no separate audio stream.</string>
    <string name="format_sheet_adjust_video">Adjust video</string>
    <string name="format_sheet_adjust_audio">Adjust audio</string>
    <string name="format_sheet_thumbnail">Thumbnail</string>
    <string name="format_sheet_chapters">Chapters</string>
    <string name="format_sheet_subtitles">Subtitles</string>
    <string name="format_sheet_sponsorblock">SponsorBlock</string>
    <string name="format_sheet_audio_language">Audio language</string>
...
    <string name="properties_saved_to">Saved to</string>
    <string name="properties_downloaded">Downloaded</string>
    <string name="properties_source">Source</string>

    <!-- CookiesScreen -->
    <string name="cookies_back">Back</string>
    <string name="cookies_title">Cookies</string>
    <string name="cookies_menu">More</string>
    <string name="cookies_menu_import_file">Import from file</string>
    <string name="cookies_menu_import">Import from clipboard</string>
    <string name="cookies_menu_export">Export to clipboard</string>
    <string name="cookies_menu_delete_all">Delete all</string>
    <!-- The label given to a set of cookies pasted in from the clipboard. -->
...
    <string name="batch_container_subtitle">The file these links are saved as</string>
    <string name="batch_save_dir_title">Save location</string>
    <string name="batch_open_folder">Open this folder</string>
    <string name="batch_change_folder">Change folder</string>

    <!-- Batch action bar -->
    <string name="batch_bar_thumbnail">Thumbnail</string>
    <string name="batch_bar_chapters">Chapters</string>
    <string name="batch_bar_subtitles">Subtitles</string>
    <string name="batch_bar_sponsorblock">SponsorBlock</string>
    <string name="batch_bar_filename_template">Filename template</string>
    <string name="batch_bar_download_type">Preferred download type</string>
    <!-- Spoken for an icon button. %1$s is the quality name the button currently stands for. -->
    <string name="batch_bar_quality">Quality: %1$s</string>
    <string name="batch_bar_save_location">Save location</string>
    <string name="batch_bar_container">Container</string>

    <!-- Batch download sheet -->
    <string name="batch_header_title">Download</string>
    <string name="batch_header_subtitle">Adjust download</string>
    <string name="batch_download_action">Download</string>
    <string name="batch_stop_selecting">Stop selecting</string>
    <string name="batch_start_selecting">Select links</string>
    <string name="batch_list_options">List options</string>
    <string name="batch_menu_select_links">Select links</string>
    <string name="batch_menu_select_all">Select all</string>
    <string name="batch_menu_invert">Invert selection</string>
    <string name="batch_menu_remove_selected">Remove selected</string>
    <string name="batch_menu_done">Done</string>
    <plurals name="batch_selected">
...
    <string name="format_selection_title">Format</string>
    <string name="format_selection_subtitle">Select format</string>
    <string name="format_selection_confirm">OK</string>
    <string name="format_selection_loading">Reading the rest of the formats</string>
    <string name="format_audio_empty">No separate audio streams for this link</string>
    <string name="format_generic_badge">Auto</string>
    <string name="format_sheet_section_details">Details</string>
    <string name="sheet_link_title">Link</string>
    <string name="sheet_link_copy">Copy</string>
    <string name="sheet_link_open">Open</string>
    <string name="sheet_link_options">Link options</string>
    <string name="sheet_link_copied">Link copied</string>
    <string name="sheet_link_open_failed">No app can open this link</string>
    <string name="sheet_cookies_site_saved">Signed in to %1$s</string>
    <string name="sheet_cookies_site_missing">No sign-in saved for %1$s</string>
    <string name="batch_search_open">Search links</string>
    <string name="batch_search_hint">Search these links</string>
    <string name="batch_search_close">Close search</string>
    <string name="batch_search_none">No links match</string>
    <string name="batch_remove_title">Remove this link?</string>
    <string name="batch_remove_body">%1$s will be left out of this download.</string>
    <string name="format_sort_quality">Quality</string>
...
